@@ -4160,7 +4160,7 @@ c
       DOUBLE PRECISION DFLAG,DH12,DH22,DX,TWO,Z,DH11,DH21,                          &
      & DPARAM,DY,W,ZERO
       INTEGER N,INCX,INCY,NSTEPS,I,KX,KY
-      DIMENSION DX(1),DY(1),DPARAM(5)
+      DIMENSION DX(*),DY(*),DPARAM(5)
       DATA ZERO,TWO/0.D0,2.D0/
 c
       DFLAG=DPARAM(1)
